@@ -2,7 +2,10 @@ package refmeister.entity;
 
 import refmeister.XML.Saveable;
 import refmeister.XML.XMLManager;
-import refmeister.entity.Interfaces.*;
+import refmeister.entity.Interfaces.Editable;
+import refmeister.entity.Interfaces.Entity;
+import refmeister.entity.Interfaces.Relatable;
+import refmeister.entity.Interfaces.Relation;
 
 import java.util.ArrayList;
 import java.util.Collections;
